<resources>
    <string name="app_name">Safebox</string>

    //  toolbar
    <string name="action_back">Back</string>
    <string name="action_edit">Edit</string>
    <string name="action_save">Save</string>
    <string name="action_more">More</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>


    //  Login
    <string name="login_toolbar">Safebox Login</string>
    <string name="login_info">This application will help you to save all of your private passwords, update them at any time and keep them secret from strangers.</string>
    <string name="login_password_info_first_time">Set your password for the first time:</string>
    <string name="login_password_info">Enter your password:</string>
    <string name="login_password_hint">password</string>
    <string name="login_password_alert_title">Wrong password</string>
    <string name="login_password_alert_message">Please enter the correct password</string>
    <string name="login_password_alert_ok">OK</string>


    //  Passwords
    <string name="passwords_toolbar">Your Passwords</string>
    <string name="passwords_empty_state">Passwords list is empty</string>


    //  Update Passwords
    <string name="update_passwords_toolbar">Update Passwords</string>
    <string name="update_description_hint">Description</string>
    <string name="update_password_hint">Password</string>
    <string name="add_password_button">Add Password</string>
    <string name="update_passwords_empty_state">Click the Add button to add new password</string>
    <string name="update_passwords_saved_toast">passwords saved</string>


    //  Settings
    <string name="settings_toolbar">Settings</string>
    <string name="settings_update_location_button">Update location</string>
    <string name="settings_name">Name</string>
    <string name="settings_last_name">Last Name</string>
    <string name="settings_alert_no_permission_title">No Permission to get location</string>
    <string name="settings_alert_no_permission_message">Can not find location</string>
    <string name="settings_alert_no_permission_button">OK</string>
    <string name="settings_saved_toast">settings saved</string>


    //  About
    <string name="about_toolbar">About</string>
    <string name="about_my_name">Zion Nava</string>
    <string name="about_my_job">Junior Data Scientist at BlueVine</string>
    <string name="about_my_location">Israel</string>
    <string name="about_experience_title">Experience</string>
    <string name="about_job1_name">Junior Data Scientist</string>
    <string name="about_job1_company">BlueVine</string>
    <string name="about_job1_extra">Aug 2018 – Present</string>
    <string name="about_job2_name">NOC engineer</string>
    <string name="about_job2_company">Gigya</string>
    <string name="about_job2_extra">Mar 2017 – Present</string>
    <string name="about_job3_name">Research Assistant</string>
    <string name="about_job3_company">STKI</string>
    <string name="about_job3_extra">Sep 2016 – Apr 2017</string>
    <string name="about_education_title">Education</string>
    <string name="about_education1">The Academic College of Tel-Aviv, Yaffo</string>
    <string name="about_education2">Bachelor of Science (BSc), Management Information Systems, General</string>
    <string name="about_education3">2015 – 2018</string>
    <string name="about_skills_title">Skills &amp; Endorsements</string>
    <string name="about_skills1">SQL</string>
    <string name="about_skills2">JavaScript</string>
    <string name="about_skills3">PHP</string>

</resources>
