<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/edit"
        android:visible="true"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_edit"
        android:title="@string/action_edit" />

    <item
        android:id="@+id/more"
        android:visible="true"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_more"
        android:title="@string/action_more" >

        <menu>
            <item
                android:id="@+id/settings"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/about"
                android:title="@string/action_about" />
        </menu>

    </item>

</menu>
