<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/infoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/login_info"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/infoText"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/passwordInfoText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@+id/info_text"
                android:layout_marginStart="3dp"
                android:text="@string/login_password_info_first_time" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password_info_text"
                android:hint="@string/login_password_hint"
                android:textSize="16sp" />

            <com.general.safebox.widgets.AlphaFrameLayout
                android:id="@+id/enterButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_marginTop="15dp"
                android:background="@drawable/circle_accent_color"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/generic_login_continue_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:src="@drawable/ic_arrow_forward_white_24px" />

            </com.general.safebox.widgets.AlphaFrameLayout>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>