<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="130dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp">

                    <VideoView
                        android:id="@+id/about_video"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"/>

                </RelativeLayout>

                <View android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginTop="100dp"
                    android:background="@drawable/toolbar_drop_shadow"/>

                <FrameLayout
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="30dp"
                    android:background="@color/white">

                    <ImageView
                        android:layout_width="78dp"
                        android:layout_height="78dp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:src="@drawable/user_image" />

                </FrameLayout>

            </FrameLayout>

            <com.general.safebox.widgets.ProfileRow
                android:id="@+id/about_my_info_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingStart="10dp"
                android:text="@string/about_experience_title"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <com.general.safebox.widgets.ProfileRow
                android:id="@+id/about_job_row1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp" />

            <com.general.safebox.widgets.ProfileRow
                android:id="@+id/about_job_row2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp" />

            <com.general.safebox.widgets.ProfileRow
                android:id="@+id/about_job_row3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingStart="10dp"
                android:text="@string/about_education_title"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <com.general.safebox.widgets.ProfileRow
                android:id="@+id/about_education_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingStart="10dp"
                android:text="@string/about_skills_title"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingStart="10dp"
                android:text="@string/about_skills1"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingStart="10dp"
                android:text="@string/about_skills2"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingStart="10dp"
                android:text="@string/about_skills3"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>